# second_brain

./: .gitignore  CODING_STANDARDS.md  PROJECT_GUIDELINES.md  README.md  Second_Brain_Project_Journey.docx  pyproject.toml
second_brain/: __init__.py
second_brain/cli/: youtube.py
second_brain/content_ingestor/: runner.py  schema.py
second_brain/content_ingestor/diagnostics/: collector.py
second_brain/content_ingestor/stages/: analyze_semantics.py  analyze_structure.py  base.py  fetch_metadata.py  fetch_transcript.py  validate_input.py
second_brain/logging_core/: logger.py
second_brain/transcription/: __init__.py  captions.py  core.py  schema.py  whisper.py
